--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "animate.css": "^4.1.1",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.6",
     "clipboard": "^2.0.11",
     "countries-list": "^3.1.1",
     "dayjs": "^1.11.7",
@@ -22,6 +22,7 @@
     "isotope-layout": "^3.0.6",
     "itooltip": "^1.1.1",
     "next": "^14.2.5",
+    "plyr": "^3.7.8",
     "plyr-react": "^5.3.0",
     "progressbar.js": "^1.1.0",
     "react": "18.2.0",
@@ -34,7 +35,7 @@
     "scrollcue": "^2.0.0",
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
-    "swiper": "^9.1.0",
+    "swiper": "^9.4.1",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
