--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "plyr-react": "^5.3.0",
     "progressbar.js": "^1.1.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-countup": "^6.4.1",
     "react-dom": "18.2.0",
     "react-scroll": "^1.8.9",
